--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Skripsi</string>
     <string name="isyaratkita">Isyarat Kita</string>
+    <string name="welcome_user">Welcome,User</string>
+    <string name="isyarat_kita">Isyarat Kita</string>
 </resources>
