--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="isyarat_kita">Isyarat Kita</string>
     <string name="panduan_bahasa_isyarat">Panduan Bahasa Isyarat</string>
     <string name="deskripsi_paduan">Berisikan Bahasa Isyarat Yang Kita Gunakan Di Kehidupan Sehari-hari.</string>
+    <string name="tes">Ini Halaman Panduan Bahasa Isyarat</string>
 </resources>
