--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="panduan_bahasa_isyarat">Panduan Bahasa Isyarat</string>
     <string name="deskripsi_paduan">Berisikan Bahasa Isyarat Yang Kita Gunakan Di Kehidupan Sehari-hari.</string>
     <string name="tes">Ini Halaman Panduan Bahasa Isyarat</string>
+    <string name="deteksi_bahasa_isyarat">Deteksi Bahasa Isyarat</string>
+    <string name="switchcamera">SwitchCamera</string>
 </resources>
