--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="tes">Ini Halaman Panduan Bahasa Isyarat</string>
     <string name="deteksi_bahasa_isyarat">Deteksi Bahasa Isyarat</string>
     <string name="switchcamera">SwitchCamera</string>
+    <string name="gesture_detected">Tangan Terdeteksi: %1$s dengan kepercayaan %2$.1f%%</string>
+    <string name="switch_camera">Switch Camera</string>
+    <string name="detecting_gesture">Tunjukkan gesture tangan Anda</string>
+    <string name="camera_permission_required">Camera permission is required for gesture recognition</string>
+    <string name="model_load_error">Failed to initialize camera and AI model</string>
+    <string name="camera_init_failed">Failed to initialize camera</string>
+    <string name="tunjukkan_gesture_tangan_anda">Tunjukkan gesture tangan Anda</string>
 </resources>
