--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="camera_permission_required">Camera permission is required for gesture recognition</string>
     <string name="model_load_error">Failed to initialize camera and AI model</string>
     <string name="camera_init_failed">Failed to initialize camera</string>
+    <string name="close">Close</string>
 </resources>
